--- a/Makefile.fedora
+++ b/Makefile.fedora
@@ -79,4 +79,7 @@ dump-gnome-terminal: ${HOME}/.dotfiles/gnome-terminal
 load-gnome-terminal: ${HOME}/.dotfiles/gnome-terminal
 	dconf load /org/gnome/terminal/legacy/profiles:/:${GNOME_TERMINAL_PROFILE}/ < ${HOME}/.dotfiles/gnome-terminal/adp-profile.gconf
 
+essentials:
+	$(INSTALL) the_silver_searcher jq vim
+
 .PHONY: nvidia fonts use-ubuntu-fonts setup-fonts yubikey gnome-settings dump-gnome-terminal load-gnome-terminal repos
