--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,3 +6,6 @@ set-option -g default-terminal "screen-256color"
 bind '%' split-window -h -c '#{pane_current_path}' 
 bind '"' split-window -v -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
+
+set -g status off
+
