--- a/Makefile.fedora
+++ b/Makefile.fedora
@@ -82,4 +82,17 @@ load-gnome-terminal: ${HOME}/.dotfiles/gnome-terminal
 essentials:
 	$(INSTALL) the_silver_searcher jq vim
 
+chrome:
+	cd /tmp
+	wget https://dl.google.com/linux/linux_signing_key.pub
+	sudo rpm --import linux_signing_key.pub
+	sudo dnf install https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm
+
+/etc/yum.repos.d/vscode.repo:
+	sudo rpm --import https://packages.microsoft.com/keys/microsoft.asc
+	sudo sh -c 'echo -e "[code]\nname=Visual Studio Code\nbaseurl=https://packages.microsoft.com/yumrepos/vscode\nenabled=1\ngpgcheck=1\ngpgkey=https://packages.microsoft.com/keys/microsoft.asc" > /etc/yum.repos.d/vscode.repo'
+
+vscode: /etc/yum.repos.d/vscode.repo
+	sudo dnf install code
+
 .PHONY: nvidia fonts use-ubuntu-fonts setup-fonts yubikey gnome-settings dump-gnome-terminal load-gnome-terminal repos
